comments and tags pages

--- a/device-detail.html
+++ b/device-detail.html
@@ -412,7 +412,7 @@
                         aria-controls="nav-profile" aria-selected="false">Aggregated</a>
                       <a class="nav-item nav-link" id="nav-contact-tab" data-toggle="tab" href="#nav-comments"
                         role="tab" aria-controls="nav-contact" aria-selected="false">Comments</a>
-                      <a class="nav-item nav-link" id="nav-tags-tab" data-toggle="tab" href="#nav-contact" role="tab"
+                      <a class="nav-item nav-link" id="nav-tags-tab" data-toggle="tab" href="#nav-tags" role="tab"
                         aria-controls="nav-contact" aria-selected="false">Tags</a>
                     </div>
                   </nav>
@@ -1417,7 +1417,8 @@
 
                                   <div class="profile-comment-time-stamp-box">
                                     <div class="profile-comment-time-update">Last Updated: 2/3/20 @ 12:12am</div>
-                                    <div>Updated by: <a href="#">Ann@vinventa.com</a></div>
+                                    <div class="profile-comment-time-update">Updated by: <a
+                                        href="#">Ann@vinventa.com</a></div>
                                   </div>
                                 </div>
 
@@ -1492,6 +1493,230 @@
 
 
                           </div>
+
+                        </div>
+
+
+                      </div>
+
+                    </div>
+
+                    <!-- Nav-Tabs-Section -->
+                    <div class="tab-pane fade" id="nav-tags" role="tabpanel" aria-labelledby="nav-contact-tab">
+
+                      <div class="inner-tab-content">
+
+                        <div class="row m-0">
+
+
+                          <div class="col-lg-12">
+
+
+                            <div class="white-bg border-theme inner-tab-content-right-col">
+
+
+
+                              <div class="add-tags-container">
+                                <div class="add-tags-left-col">
+                                  <table class="table table-borderless">
+                                    <thead>
+                                      <tr>
+                                        <th>Tag Name</th>
+                                        <th>Tag Value</th>
+                                        <th class="th-icon-div">Edit Tag</th>
+                                        <th class="th-icon-div">Delete Tag</th>
+                                      </tr>
+                                    </thead>
+                                    <tbody>
+                                      <tr>
+                                        <td>
+                                          <div class="empty-tag-container-div"></div>
+                                        </td>
+                                      </tr>
+
+                                      <tr>
+                                        <td>
+                                          <div class="td-bubble">
+                                            Sed ut perspiciatis
+                                          </div>
+                                        </td>
+                                        <td>Dyus Hahej uryde</td>
+                                        <td class="icon-td">
+                                          <a href="#">
+                                            <img src="images/edit.svg" class="table-icons">
+                                          </a>
+                                        </td>
+                                        <td class="icon-td">
+                                          <a href="#">
+                                            <img src="images/delete.svg" class="table-icons">
+                                          </a>
+                                        </td>
+                                      </tr>
+
+                                      <tr>
+                                        <td>
+                                          <div class="tags-table-empty-row">
+
+                                          </div>
+                                        </td>
+                                      </tr>
+
+                                      <tr>
+                                        <td>
+                                          <div class="td-bubble">
+                                            Sed ut perspiciatis
+                                          </div>
+                                        </td>
+                                        <td>Dyus Hahej uryde</td>
+                                        <td class="icon-td">
+                                          <a href="#">
+                                            <img src="images/edit.svg" class="table-icons">
+                                          </a>
+                                        </td>
+                                        <td class="icon-td">
+                                          <a href="#">
+                                            <img src="images/delete.svg" class="table-icons">
+                                          </a>
+                                        </td>
+                                      </tr>
+
+                                      <tr>
+                                        <td>
+                                          <div class="tags-table-empty-row">
+
+                                          </div>
+                                        </td>
+                                      </tr>
+
+                                      <tr>
+                                        <td>
+                                          <div class="td-bubble">
+                                            Sed ut perspiciatis
+                                          </div>
+                                        </td>
+                                        <td>Dyus Hahej uryde</td>
+                                        <td class="icon-td">
+                                          <a href="#">
+                                            <img src="images/edit.svg" class="table-icons">
+                                          </a>
+                                        </td>
+                                        <td class="icon-td">
+                                          <a href="#">
+                                            <img src="images/delete.svg" class="table-icons">
+                                          </a>
+                                        </td>
+                                      </tr>
+
+                                      <tr>
+                                        <td>
+                                          <div class="tags-table-empty-row">
+
+                                          </div>
+                                        </td>
+                                      </tr>
+
+                                      <tr>
+                                        <td>
+                                          <div class="td-bubble">
+                                            Sed ut perspiciatis
+                                          </div>
+                                        </td>
+                                        <td>Dyus Hahej uryde</td>
+                                        <td class="icon-td">
+                                          <a href="#">
+                                            <img src="images/edit.svg" class="table-icons">
+                                          </a>
+                                        </td>
+                                        <td class="icon-td">
+                                          <a href="#">
+                                            <img src="images/delete.svg" class="table-icons">
+                                          </a>
+                                        </td>
+                                      </tr>
+
+                                      <tr>
+                                        <td>
+                                          <div class="tags-table-empty-row">
+
+                                          </div>
+                                        </td>
+                                      </tr>
+
+                                      <tr>
+                                        <td>
+                                          <div class="td-bubble">
+                                            Sed ut perspiciatis
+                                          </div>
+                                        </td>
+                                        <td>Dyus Hahej uryde</td>
+                                        <td class="icon-td">
+                                          <a href="#">
+                                            <img src="images/edit.svg" class="table-icons">
+                                          </a>
+                                        </td>
+                                        <td class="icon-td">
+                                          <a href="#">
+                                            <img src="images/delete.svg" class="table-icons">
+                                          </a>
+                                        </td>
+                                      </tr>
+
+                                      <tr>
+                                        <td>
+                                          <div class="tags-table-empty-row">
+
+                                          </div>
+                                        </td>
+                                      </tr>
+
+
+
+
+
+
+
+
+
+
+
+
+                                    </tbody>
+                                  </table>
+                                </div>
+
+
+
+
+                                <div class="add-tags-right-col">
+
+                                  <div class="tags-field-box">
+
+                                    <input type="text" placeholder="Tag..">
+                                    <input type="text" placeholder="Value..">
+
+                                  </div>
+
+                                  <button type="button" class="theme-button-small graydient-primary-btn">Add</button>
+
+                                </div>
+                              </div>
+
+
+
+
+
+                            </div>
+
+
+
+
+
+                          </div>
+
+
+
+
+
 
                         </div>
 
