scroll div work

--- a/device-detail.html
+++ b/device-detail.html
@@ -673,7 +673,7 @@
                                   </div>
 
 
-                                  <div class="tab-inner-expand-collapse-row">
+                                  <!-- <div class="tab-inner-expand-collapse-row">
 
                                     <div class="expand-collapse-row-btns">
                                       <a href="#" data-toggle="modal" data-target="#query-wizard-modal">Expand all</a>
@@ -682,9 +682,9 @@
                                     </div>
 
 
-                                  </div>
+                                  </div> -->
 
-                                  <div class="row">
+                                  <div class="row mt-4">
                                     <div class="col-lg-4">
 
                                       <div class="tab-right-collapse-box">
@@ -764,7 +764,24 @@
                                       </div>
                                     </div>
 
+                                    <div class="row mt-4 ml-2 scroll-div">
+                                      <div class="col-lg-12 tree-list-div">
 
+                                        <div class="device-tab-detail-box">
+                                          <div class="device-tab-right-heading">
+                                            Asset Name Asset Name Asset Name Asset Name Asset Name Asset Name Asset Name
+
+                                          </div>
+                                          <div class="device-tab-norman-txt">
+                                            Windows-Server-2012-R2 Windows-Server-2012-R2Windows-Server-2012-R2
+                                            Windows-Server-2012-R2 Windows-Server-2012-R2 Windows-Server-2012-R2
+                                            Windows-Server-2012-R2 Windows-Server-2012-R2 Windows-Server-2012-R2
+
+                                          </div>
+                                        </div>
+
+                                      </div>
+                                    </div>
 
 
                                   </div>
