changes fix login page

--- a/login.html
+++ b/login.html
@@ -18,7 +18,7 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
   </script>
 
-  <script src="js/index.js"></script>
+  <script src="js/indexa.js"></script>
   <script src="js/perfect-scrollbar.js"></script>
 
 
@@ -64,7 +64,7 @@
           </ul>
         </div>
 
-        <div class="right txt-center right-section-div">
+        <div class="right txt-center right-panel-div">
           <div id="wrapper" class="LoginPanel">
             <span><img src="images/logo.svg" class="img-responsive" alt="Login Logo" /></span>
             <h1>Login </h1>
@@ -90,7 +90,7 @@
                 <input type="submit" value="Login" class="Btn cf">
                 <div class="text-c or-login-div">
                   <span class="block">Or</span>
-                  <a href="#" class="forgotLink"><strong>Login with Active Directory</strong></a>
+                  <a href="#" class="forgotLink">Login with Active Directory</a>
                 </div>
               </form>
             </div>
