--- a/connectors.html
+++ b/connectors.html
@@ -428,7 +428,7 @@
 
 
 
-                <div class="col-lg-12 inner-tab-right-section p-0">
+                <div class="col-lg-12 inner-tab-right-section connectors-main-wrapper p-0">
 
 
 
@@ -466,7 +466,7 @@
                               <th>
                                 <input type="checkbox" class="hidden">
                               </th>
-                              <th class="bold-heading">Connectors</th>
+                              <th class="bold-heading">&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;</th>
                               <th class="bold-heading">Name</th>
                               <th class="bold-heading">Description</th>
                               <th class="bold-heading">
@@ -535,7 +535,7 @@
 
                                   <span>
                                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum is simply dummy text of the printing and typesetting industry.
+                                    Ipsum is simply dummy text
                                   </span>
 
 
@@ -631,7 +631,7 @@
 
                                   <span>
                                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum is simply dummy text of the printing and typesetting industry.
+                                    Ipsum is simply dummy text
                                   </span>
 
 
@@ -727,7 +727,7 @@
 
                                   <span>
                                     Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem
-                                    Ipsum is simply dummy text of the printing and typesetting industry.
+                                    Ipsum is simply dummy text
                                   </span>
 
 
