--- a/model-links.html
+++ b/model-links.html
@@ -132,7 +132,7 @@
 
 
 
-              <h3 class="query-wizard-expression-heading mb-4">
+              <h3 class="query-wizard-expression-heading mb-4 mt-2">
                 Query Wizard Expressions
               </h3>
 
@@ -714,6 +714,484 @@
 
 
 
+  <!-- <div class="modal fade" id="query-wizard-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
+    aria-hidden="true">
+    <div class="modal-dialog" role="document">
+
+
+      <div class="col-lg-7 mx-auto">
+        <div class="modal-content">
+
+
+
+          <div class="modal-query-wizard-wrapper">
+
+
+            <button type="button" class="close no-btn" data-dismiss="modal">
+              <span>
+                <img src="images/modal-close.svg">
+              </span>
+            </button>
+
+
+            <div class="modal-header">
+              <h5 class="modal-title" id="exampleModalLabel">
+                AWS instances that have not been recently scanned by Rapid7 Nexpose
+              </h5>
+
+
+            </div>
+            <div class="modal-body">
+
+              <div class="query-wizard-sub-heading-description">
+                <h3>
+                  Description
+                </h3>
+
+
+                <p>
+                  Active AWS instances that have not been scanned by Rapid7 Nexpose in the last 30 days.
+                </p>
+              </div>
+
+
+
+
+              <h3 class="modal-heading mt-4">
+                Tags
+              </h3>
+
+
+              <div class="tags">
+                <a href="#">VA Coverage</a>
+                <a href="#">AWS</a>
+                <a href="#">Cloud</a>
+                <a href="#">Rapid7 Nexpose</a>
+              </div>
+
+
+              <h3 class="query-wizard-expression-heading">
+                Query Wizard Expressions
+              </h3>
+
+
+              <div class="query-wizard-expension mt-4">
+
+                <div class="hidden">
+                  <select id="cars">
+                    <option value="volvo">AND</option>
+                    <option value="saab">Saab</option>
+                    <option value="mercedes">Mercedes</option>
+                    <option value="audi">Audi</option>
+                  </select>
+                </div>
+
+
+
+
+                <div class="disabled-input">
+                  {
+                </div>
+
+                <div class="disabled-input">
+                  NOT
+                </div>
+
+                <div>
+                  <select id="cars">
+                    <option value="volvo">ALL</option>
+                    <option value="saab">Saab</option>
+                    <option value="mercedes">Mercedes</option>
+                    <option value="audi">Audi</option>
+                  </select>
+                </div>
+
+                <div id="dd" class="dropdown-with-img" tabindex="1">
+
+                  <div class="dropdown-with-img-select">
+
+                    <div class="dropdown-logo">
+                      <img src="images/bigsight-logo.png">
+                    </div>
+                    <div>
+                      Big Sight
+                    </div>
+
+                  </div>
+
+
+
+
+                  <ul class="dropdown dropdown-with-logos">
+                    <li>
+                      <a href="#">
+                        <div class="dropdown-logo">
+                          <img src="images/bigsight-logo.png">
+                        </div>
+                        <div>
+                          Big Sight
+                        </div>
+                      </a>
+                    </li>
+
+
+                    <li>
+                      <a href="#">
+                        <div class="dropdown-logo">
+                          <img src="images/cylance_logo.png">
+                        </div>
+                        <div>
+                          Cylence
+                        </div>
+                      </a>
+                    </li>
+
+
+                    <li>
+                      <a href="#">
+                        <div class="dropdown-logo">
+                          <img src="images/fortigate_logo.png">
+                        </div>
+                        <div>
+                          Fortigate
+                        </div>
+                      </a>
+                    </li>
+
+
+                  </ul>
+                </div>
+
+
+                <div>
+                  <select id="cars">
+                    <option value="volvo">Volvo</option>
+                    <option value="saab">Saab</option>
+                    <option value="mercedes">Mercedes</option>
+                    <option value="audi">Audi</option>
+                  </select>
+                </div>
+
+
+                <div class=" hidden">
+                  <select id="cars">
+                    <option value="volvo">Volvo</option>
+                    <option value="saab">Saab</option>
+                    <option value="mercedes">Mercedes</option>
+                    <option value="audi">Audi</option>
+                  </select>
+                </div>
+
+
+
+                <div class="disabled-input">
+                  }
+                </div>
+
+                <div class="close-action">
+                  <a href="#">
+                    <img src="images/close-small.svg">
+                  </a>
+                </div>
+
+
+              </div>
+
+              <div class="query-wizard-expension  mt-3">
+
+
+                <div>
+                  <select id="cars">
+                    <option value="volvo">AND</option>
+                    <option value="saab">Saab</option>
+                    <option value="mercedes">Mercedes</option>
+                    <option value="audi">Audi</option>
+                  </select>
+                </div>
+
+                <div class="disabled-input">
+                  {
+                </div>
+
+                <div class="disabled-input">
+                  NOT
+                </div>
+
+                <div>
+                  <select id="cars">
+                    <option value="volvo">ALL</option>
+                    <option value="saab">Saab</option>
+                    <option value="mercedes">Mercedes</option>
+                    <option value="audi">Audi</option>
+                  </select>
+                </div>
+
+                <div id="dd" class="dropdown-with-img" tabindex="1">
+
+                  <div class="dropdown-with-img-select">
+
+                    <div class="dropdown-logo">
+                      <img src="images/cisco_logo.png">
+                    </div>
+                    <div>
+                      Big Sight
+                    </div>
+
+                  </div>
+
+
+
+
+                  <ul class="dropdown dropdown-with-logos">
+                    <li>
+                      <a href="#">
+                        <div class="dropdown-logo">
+                          <img src="images/bigsight-logo.png">
+                        </div>
+                        <div>
+                          Big Sight
+                        </div>
+                      </a>
+                    </li>
+
+
+                    <li>
+                      <a href="#">
+                        <div class="dropdown-logo">
+                          <img src="images/cylance_logo.png">
+                        </div>
+                        <div>
+                          Cylence
+                        </div>
+                      </a>
+                    </li>
+
+
+                    <li>
+                      <a href="#">
+                        <div class="dropdown-logo">
+                          <img src="images/fortigate_logo.png">
+                        </div>
+                        <div>
+                          Fortigate
+                        </div>
+                      </a>
+                    </li>
+
+
+                  </ul>
+                </div>
+
+
+                <div>
+                  <select id="cars">
+                    <option value="volvo">Volvo</option>
+                    <option value="saab">Saab</option>
+                    <option value="mercedes">Mercedes</option>
+                    <option value="audi">Audi</option>
+                  </select>
+                </div>
+
+
+                <div>
+                  <select id="cars">
+                    <option value="volvo">Volvo</option>
+                    <option value="saab">Saab</option>
+                    <option value="mercedes">Mercedes</option>
+                    <option value="audi">Audi</option>
+                  </select>
+                </div>
+
+
+                <div class="disabled-input">
+                  }
+                </div>
+
+
+
+                <div class="close-action">
+                  <a href="#">
+                    <img src="images/close-small.svg">
+                  </a>
+                </div>
+
+
+              </div>
+
+
+              <div class="query-wizard-expension mt-3">
+
+                <div>
+                  <select id="cars">
+                    <option value="volvo">AND</option>
+                    <option value="saab">Saab</option>
+                    <option value="mercedes">Mercedes</option>
+                    <option value="audi">Audi</option>
+                  </select>
+                </div>
+
+
+
+
+                <div class="disabled-input">
+                  {
+                </div>
+
+                <div class="disabled-input">
+                  NOT
+                </div>
+
+                <div>
+                  <select id="cars">
+                    <option value="volvo">ALL</option>
+                    <option value="saab">Saab</option>
+                    <option value="mercedes">Mercedes</option>
+                    <option value="audi">Audi</option>
+                  </select>
+                </div>
+
+                <div id="dd" class="dropdown-with-img" tabindex="1">
+
+                  <div class="dropdown-with-img-select">
+
+                    <div class="dropdown-logo">
+                      <img src="images/bigsight-logo.png">
+                    </div>
+                    <div>
+                      Big Sight
+                    </div>
+
+                  </div>
+
+
+
+
+                  <ul class="dropdown dropdown-with-logos">
+                    <li>
+                      <a href="#">
+                        <div class="dropdown-logo">
+                          <img src="images/bigsight-logo.png">
+                        </div>
+                        <div>
+                          Big Sight
+                        </div>
+                      </a>
+                    </li>
+
+
+                    <li>
+                      <a href="#">
+                        <div class="dropdown-logo">
+                          <img src="images/cylance_logo.png">
+                        </div>
+                        <div>
+                          Cylence
+                        </div>
+                      </a>
+                    </li>
+
+
+                    <li>
+                      <a href="#">
+                        <div class="dropdown-logo">
+                          <img src="images/fortigate_logo.png">
+                        </div>
+                        <div>
+                          Fortigate
+                        </div>
+                      </a>
+                    </li>
+
+
+                  </ul>
+                </div>
+
+
+                <div>
+                  <select id="cars">
+                    <option value="volvo">Volvo</option>
+                    <option value="saab">Saab</option>
+                    <option value="mercedes">Mercedes</option>
+                    <option value="audi">Audi</option>
+                  </select>
+                </div>
+
+
+                <div class=" hidden">
+                  <select id="cars">
+                    <option value="volvo">Volvo</option>
+                    <option value="saab">Saab</option>
+                    <option value="mercedes">Mercedes</option>
+                    <option value="audi">Audi</option>
+                  </select>
+                </div>
+
+
+
+                <div class="disabled-input">
+                  }
+                </div>
+
+                <div class="close-action">
+                  <a href="#">
+                    <img src="images/close-small.svg">
+                  </a>
+                </div>
+
+
+              </div>
+
+
+              <div class="mt-3 add-query-btn-row">
+                <a href="#">+</a>
+              </div>
+
+              <div class="query-switch-btn mt-3">
+
+                <input class="mr-2" type="checkbox" value="" id="defaultCheck1">
+
+                Include outdated Apater Devices in query
+
+
+              </div>
+
+
+
+
+              <h3 class="modal-heading mt-4">
+                Description
+              </h3>
+
+
+
+
+              <h3 class="modal-text-row">
+                Predefined
+              </h3>
+
+
+
+
+
+            </div>
+          </div>
+
+
+
+
+          <div class="modal-footer no-border">
+            <button type="button" class="btn btn-secondary" data-dismiss="modal">Clear</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+
+
+    </div>
+  </div> -->
+
+
+
   <div class="modal fade" id="query-wizard-modal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel"
     aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -1189,9 +1667,6 @@
 
     </div>
   </div>
-
-
-
 
 
 
