all links page inclued login page

--- a/all-links.html
+++ b/all-links.html
@@ -55,6 +55,13 @@
                     <br />
                     <br />
                     <p>
+                      <a href="login.html">Login</a>
+
+                    </p>
+                    <br />
+                    <br />
+                    <br />
+                    <p>
                       <a href="device-detail.html">Device Detail</a>
 
                     </p>
