--- a/all-links.html
+++ b/all-links.html
@@ -55,27 +55,27 @@
                     <br />
                     <br />
                     <p>
-                      <a href="login.html">Login</a>
+                      <a href="login.html" target="_blank">Login</a>
 
                     </p>
                     <br />
                     <br />
                     <br />
                     <p>
-                      <a href="device-detail.html">Device Detail</a>
+                      <a href="device-detail.html" target="_blank">Device Detail</a>
 
                     </p>
                     <br />
                     <br />
                     <br />
                     <p>
-                      <a href="device-listings.html">Device Listings</a>
+                      <a href="device-listings.html" target="_blank">Device Listings</a>
                     </p>
                     <br />
                     <br />
                     <br />
                     <p>
-                      <a href="connectors.html">Add Connections </a>
+                      <a href="connectors.html" target="_blank">Add Connections </a>
                     </p>
                   </div>
                 </div>
