--- a/adapter-config.html
+++ b/adapter-config.html
@@ -397,41 +397,64 @@
 
                                   <td>
                                     <div class="table-innerbox">
-                                      <div>Master</div>
-                                    </div>
-                                  </td>
-                                  <td><div class="table-innerbox"></div></td>
-                                  <td>
-                                    <div class="table-innerbox">
-                                      <div>us=east-2</div>
-                                    </div>
-                                  </td>
-                                  <td>
-                                    <div class="table-innerbox">
-                                      <div>No</div>
-                                    </div>
-                                  </td>
-                                  <td>
-                                    <div class="table-innerbox">
-                                      <div>DF98SD0FD0SFS8</div>
-                                    </div>
-                                  </td>
-                                  <td><div class="table-innerbox"></div></td>
-                                  <td><div class="table-innerbox"></div></td>
-                                  <td>
-                                    <div class="table-innerbox">
-                                      <div>No</div>
+                                      <div class="table-innerbox">
+                                        <span>
+                                          Master
+                                        </span>
+                                      </div>
                                     </div>
                                   </td>
 
+                                  <td>
+                                    <div class="table-innerbox">
+                                      &nbsp;
+                                    </div>
+                                  </td>
+
+                                  <td>
+                                    <div class="table-innerbox">
+                                      <span>
+                                        us=east-2
+                                      </span>
+                                    </div>
+                                  </td>
+                                  <td>
+                                    <div class="table-innerbox">
+                                      <span>
+                                        No
+                                      </span>
+                                    </div>
+                                  </td>
+                                  <td>
+                                    <div class="table-innerbox">
+                                      <span>
+                                        DF98SD0FD0SFS8
+                                      </span>
+                                    </div>
+                                  </td>
+                                  <td>
+                                    <div class="table-innerbox">
+                                      &nbsp;
+                                    </div>
+                                  </td>
+                                  <td>
+                                    <div class="table-innerbox">
+                                      &nbsp;
+                                    </div>
+                                  </td>
+                                  <td>
+                                    <div class="table-innerbox">
+                                      <span>
+                                        No
+                                      </span>
+                                    </div>
+                                  </td>
                                   <td
                                     class="border-top-right border-bottom-right"
                                   >
-                                    <div class="table-innerbox">
-                                      <a href="#" class="acord-arrow">
-                                        dadadad
-                                      </a>
-                                    </div>
+                                    <a href="#" class="acord-arrow">
+                                      dadad adad
+                                    </a>
                                   </td>
                                 </tr>
 
@@ -453,41 +476,64 @@
 
                                   <td>
                                     <div class="table-innerbox">
-                                      <div>Master</div>
-                                    </div>
-                                  </td>
-                                  <td><div class="table-innerbox"></div></td>
-                                  <td>
-                                    <div class="table-innerbox">
-                                      <div>us=east-2</div>
-                                    </div>
-                                  </td>
-                                  <td>
-                                    <div class="table-innerbox">
-                                      <div>No</div>
-                                    </div>
-                                  </td>
-                                  <td>
-                                    <div class="table-innerbox">
-                                      <div>DF98SD0FD0SFS8</div>
-                                    </div>
-                                  </td>
-                                  <td><div class="table-innerbox"></div></td>
-                                  <td><div class="table-innerbox"></div></td>
-                                  <td>
-                                    <div class="table-innerbox">
-                                      <div>No</div>
+                                      <div class="table-innerbox">
+                                        <span>
+                                          Master
+                                        </span>
+                                      </div>
                                     </div>
                                   </td>
 
+                                  <td>
+                                    <div class="table-innerbox">
+                                      &nbsp;
+                                    </div>
+                                  </td>
+
+                                  <td>
+                                    <div class="table-innerbox">
+                                      <span>
+                                        us=east-2
+                                      </span>
+                                    </div>
+                                  </td>
+                                  <td>
+                                    <div class="table-innerbox">
+                                      <span>
+                                        No
+                                      </span>
+                                    </div>
+                                  </td>
+                                  <td>
+                                    <div class="table-innerbox">
+                                      <span>
+                                        DF98SD0FD0SFS8
+                                      </span>
+                                    </div>
+                                  </td>
+                                  <td>
+                                    <div class="table-innerbox">
+                                      &nbsp;
+                                    </div>
+                                  </td>
+                                  <td>
+                                    <div class="table-innerbox">
+                                      &nbsp;
+                                    </div>
+                                  </td>
+                                  <td>
+                                    <div class="table-innerbox">
+                                      <span>
+                                        No
+                                      </span>
+                                    </div>
+                                  </td>
                                   <td
                                     class="border-top-right border-bottom-right"
                                   >
-                                    <div class="table-innerbox">
-                                      <a href="#" class="acord-arrow">
-                                        dadadad
-                                      </a>
-                                    </div>
+                                    <a href="#" class="acord-arrow">
+                                      dadad adad
+                                    </a>
                                   </td>
                                 </tr>
 
