--- a/adapter-config.html
+++ b/adapter-config.html
@@ -331,7 +331,7 @@
                 <div class="section-wrapper adapter-config-wrapper">
                   <div class="page-heading-with-device-list-btn">
                     <div class="page-heading">
-                      Adapters &gt;
+                      Connectors &gt;
 
                       <div class="breadcumb-flex">
                         <div class="page-heading-breadcrumb">
@@ -371,7 +371,9 @@
                               <tbody>
                                 <tr>
                                   <th>
-                                    <input type="checkbox" />
+                                    <div class="head-input">
+                                      <input type="checkbox" />
+                                    </div>
                                   </th>
                                   <th class="bold-heading">Instance Name</th>
                                   <th class="bold-heading">Connection Label</th>
@@ -452,8 +454,8 @@
                                   <td
                                     class="border-top-right border-bottom-right"
                                   >
-                                    <a href="#" class="acord-arrow">
-                                      dadad adad
+                                    <a href="#" class="last-td-p">
+                                      Discover Now
                                     </a>
                                   </td>
                                 </tr>
@@ -478,7 +480,7 @@
                                     <div class="table-innerbox">
                                       <div class="table-innerbox">
                                         <span>
-                                          Master
+                                          Master-2
                                         </span>
                                       </div>
                                     </div>
@@ -493,21 +495,21 @@
                                   <td>
                                     <div class="table-innerbox">
                                       <span>
-                                        us=east-2
+                                        us=east-3
                                       </span>
                                     </div>
                                   </td>
                                   <td>
                                     <div class="table-innerbox">
                                       <span>
-                                        No
+                                        Yes
                                       </span>
                                     </div>
                                   </td>
                                   <td>
                                     <div class="table-innerbox">
                                       <span>
-                                        DF98SD0FD0SFS8
+                                        KF58SD0FD0SFS8
                                       </span>
                                     </div>
                                   </td>
@@ -524,15 +526,15 @@
                                   <td>
                                     <div class="table-innerbox">
                                       <span>
-                                        No
+                                        Yes
                                       </span>
                                     </div>
                                   </td>
                                   <td
                                     class="border-top-right border-bottom-right"
                                   >
-                                    <a href="#" class="acord-arrow">
-                                      dadad adad
+                                    <a href="#" class="last-td-p">
+                                      Discover Now
                                     </a>
                                   </td>
                                 </tr>
@@ -551,7 +553,7 @@
                         </div>
                       </div>
 
-                      <div class="bottom-page">
+                      <!-- <div class="bottom-page">
                         <ul class="pagination table-pagination">
                           <li class="page-item">
                             <a class="page-link" href="#">First</a>
@@ -585,7 +587,7 @@
                             <img src="images/down-arrow.svg" />
                           </a>
                         </div>
-                      </div>
+                      </div> -->
                     </div>
                   </div>
 
