--- a/all-links.html
+++ b/all-links.html
@@ -77,6 +77,12 @@
                     <p>
                       <a href="connectors.html" target="_blank">Add Connections </a>
                     </p>
+                    <br />
+                    <br />
+                    <br />
+                    <p>
+                      <a href="adapter-config.html" target="_blank">Adapter Config </a>
+                    </p>
                   </div>
                 </div>
 
@@ -1875,7 +1881,7 @@
 
 
 
-      <div class="col-lg-10 modal-wrapper-xl mx-auto">
+      <div class="col-lg-7 modal-wrapper-xl mx-auto">
         <div class="modal-content">
 
           <div class="modal-body">
@@ -1887,11 +1893,11 @@
 
               <div class="adding-adapter-modal-header">
                 <div class="adapter-modal-logo">
-                  <img src="images/microsoft-windows-logo.svg">
+                  <img src="images/aws_logo.png">
                 </div>
 
                 <div class="adapter-modal-name">
-                  Microsoft Active Directory (AD)
+                  Amazon Web Services (AWS)
                 </div>
 
 
@@ -1957,7 +1963,7 @@
 
 
                 <div class="adapter-modal-field-row mt-3">
-                  <div class="mr-3">
+                  <div class="mr-3" style="margin-right: 0rem!important;">
                     <label>Account Tag</label>
                     <input type="text" class="field-large" placeholder="">
                   </div>
