--- a/connectors.html
+++ b/connectors.html
@@ -466,7 +466,7 @@
                               <th>
                                 <input type="checkbox" class="hidden">
                               </th>
-                              <th class="bold-heading">&nbsp; &nbsp; &nbsp; &nbsp;&nbsp;&nbsp;&nbsp;</th>
+                              <th class="bold-heading">&nbsp; &nbsp; &nbsp; &nbsp;</th>
                               <th class="bold-heading">Name</th>
                               <th class="bold-heading">Description</th>
                               <th class="bold-heading">
@@ -491,7 +491,7 @@
 
 
                                   <div class="table-icon">
-                                    <span><img src="images/right-icon.svg" width="25" height="25"></span>
+                                    <!-- <span><img src="images/right-icon.svg" width="25" height="25"></span> -->
                                     <span>(1)</span>
                                     <!-- <a href="#"><img src="images/deep_security_logo.png"></a>
                                     <a href="#"><img src="images/eset_logo.png"></a>
@@ -587,7 +587,7 @@
 
 
                                   <div class="table-icon">
-                                    <span><img src="images/exclamation-mark-icon.svg" width="25" height="25"></span>
+                                    <!-- <span><img src="images/exclamation-mark-icon.svg" width="25" height="25"></span> -->
                                     <span>(1)</span>
                                     <!-- <a href="#"><img src="images/deep_security_logo.png"></a>
                                     <a href="#"><img src="images/eset_logo.png"></a>
@@ -682,8 +682,8 @@
 
 
                                   <div class="table-icon">
-                                    <span><img src="images/exclamation-mark-orange-icon.svg" width="25"
-                                        height="25"></span>
+                                    <!-- <span><img src="images/exclamation-mark-orange-icon.svg" width="25"
+                                        height="25"></span> -->
                                     <span>(1)</span>
                                     <!-- <a href="#"><img src="images/deep_security_logo.png"></a>
                                     <a href="#"><img src="images/eset_logo.png"></a>
