--- a/connectors.html
+++ b/connectors.html
@@ -396,7 +396,7 @@
               <div class="Connectors-top-searchbar-div">
 
                 <div class=" search-wrap">
-                  <input type="text" placeholder="Search Adapters" class="search-field">
+                  <input type="text" placeholder="Search Connectors" class="search-field">
 
                   <!-- <a href="#" class="search-query-dropdown-btn">
                     <img src="images/down-arrow.svg">
@@ -588,7 +588,7 @@
                                   <div class="table-icon">
                                     <!-- <span><img src="images/exclamation-mark-orange-icon.svg" width="25"
                                         height="25"></span> -->
-                                    <span>(1)</span>
+                                    <span>(<span class="red-text">1</span>/3)</span>
                                     <!-- <a href="#"><img src="images/deep_security_logo.png"></a>
                                     <a href="#"><img src="images/eset_logo.png"></a>
                                     <a href="#"><img src="images/fortigate_logo.png"></a>
@@ -683,7 +683,7 @@
 
                                   <div class="table-icon">
                                     <!-- <span><img src="images/exclamation-mark-icon.svg" width="25" height="25"></span> -->
-                                    <span>(<span class="red-text">1</span>/3)</span>
+                                    <span>(1)</span>
                                     <!-- <a href="#"><img src="images/deep_security_logo.png"></a>
                                     <a href="#"><img src="images/eset_logo.png"></a>
                                     <a href="#"><img src="images/fortigate_logo.png"></a>
