dashboard css changes

--- a/dashboard.html
+++ b/dashboard.html
@@ -57,15 +57,15 @@
           </li>
 
           <li class="pushy-submenu pushy-link">
-            <!-- <a href="#">
+            <a href="#">
               <div class="menu-img active dashbord-icon"></div>
               <div class="active-menu-text">
                 Dashboard
               </div>
-            </a> -->
-            <button id="first-link">
+            </a>
+            <!-- <button id="first-link">
               Dashboard
-            </button>
+            </button> 
             <ul>
               <li class="pushy-submenu">
                 <button>Sub-Submenu 1</button>
@@ -83,7 +83,7 @@
               </li>
               <li class="pushy-link"><a href="#">Item 1</a></li>
               <li class="pushy-link"><a href="#">Item 2</a></li>
-            </ul>
+            </ul>-->
           </li>
 
           <li class="pushy-link">
@@ -357,10 +357,12 @@
                         /></span>
                       </a>
                       <div
-                        class="dropdown-menu"
+                        class="dropdown-menu dashboard-title-menu-dropdown"
                         aria-labelledby="dropdownMenuButton"
                       >
-                        <a class="dropdown-item" href="#">Action</a>
+                        <a class="dropdown-item" href="#"
+                          ><img src="images/plus.png" style="" />Dashboard</a
+                        >
                         <a class="dropdown-item" href="#">Another action</a>
                         <a class="dropdown-item" href="#"
                           >Something else here</a
@@ -611,6 +613,21 @@
                         <div class="widget-vertical-column-chart">
                           <img src="images/line-graph.svg" />
                         </div>
+                      </div>
+                    </div>
+                    <div class="widget-box">
+                      <div class="widget-left-col">
+                        <div class="widget-heading">
+                          Endpoint Protection Coverage
+                        </div>
+
+                        <div class="widget-data-number">
+                          175
+                        </div>
+                      </div>
+
+                      <div class="widget-right-col">
+                        <img src="images/dashboard-circle.png" />
                       </div>
                     </div>
                     <div class="widget-box">
