dashboard right menu css changes

--- a/dashboard.html
+++ b/dashboard.html
@@ -662,7 +662,7 @@
           <div class="dashboard-right-section">
             <aside>
               <a href="#" class="close-section nav-trigger">
-                <img src="images/slide-icon.svg" />
+                <img src="images/arrow-left-button.svg" />
               </a>
 
               <div class="cycle-widget">
